--- a/PG2.html
+++ b/PG2.html
@@ -135,7 +135,7 @@
         <a href="index.html"  title="Back to Previous Pgae"><button><i class="fa-solid fa-backward"></i></button></a>
     </div>
 
-    <form action="PG3.html" method="post" align="center" onsubmit="redirectToPage(event)">
+    <form action="javascript:avoid(0)" method="post" align="center" onsubmit="redirectToPage(event)">
         <h3 align="center">TOEFL Certificate Validation</h3>
         <h4 align="center">Fill in Details for a Certificate Holder</h4>
 
@@ -153,7 +153,7 @@
         <input type="checkbox" name="" id="check" required>
         <label for="check">I agree to <a href="#" class="terms">Terms</a> & <a href="#" class="conditions">Conditions</a></label><br><br>
 
-        <input type="submit" value="Verify">
+        <a href="PG3.html"> <input type="submit" value="Verify"> </a>
     </form>
     <br><br>
 
