--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         const users = {
             "Rawazubiclient375": { password: "Rawazubipasswd375", redirectPage: "PG3.html" },
             "Mahdiclient557": { password: "Mahdipasswd557", redirectPage: "account.html" },
-            "Muhammadclient703": { password: "Muhammadpasswd703", redirectPage: "main.html" },
+            "Muhammadclient703": { password: "Muhammadpasswd703", redirectPage: "profile.html" },
             // Add more users here as needed
         };
 
