--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
             "Rawazubiclient375": { password: "Rawazubipasswd375", redirectPage: "PG3.html" },
             "Mahdiclient557": { password: "Mahdipasswd557", redirectPage: "account.html" },
             "Muhammadclient703": { password: "Muhammadpasswd703", redirectPage: "profile.html" },
+            "Hamzaclient679": { password: "Hamzapasswd679", redirectPage: "home.html" },
             // Add more users here as needed
         };
 
