--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             "Muhammadclient703": { password: "Muhammadpasswd703", redirectPage: "main.html" },
             "Hamzaclient679": { password: "Hamzapasswd679", redirectPage: "home.html" },
             "adhamclient736": { password: "adhampasswd736", redirectPage: "main.html" },
-            "muhavethpasswd857": { password: "muhavethpasswd857", redirectPage: "view.html" },
+            "muhavethclient857": { password: "muhavethpasswd857", redirectPage: "view.html" },
             // Add more users here as needed
         };
 
