--- a/stacs.html
+++ b/stacs.html
@@ -279,7 +279,7 @@
                 </thead>
                 <tbody class="tobtbody">
                     <tr class="tobtr">
-                        <td>Ahmed Abdurahman Obeid</td>
+                        <td>Ahmed Abdurahman Naji Abdurab Obeid</td>
                         <td>xxxxxxxx2638</td>
                         <td>1773 0624 9342 6538</td>
                     </tr>
