--- a/viewstac.html
+++ b/viewstac.html
@@ -279,7 +279,7 @@
                 </thead>
                 <tbody class="tobtbody">
                     <tr class="tobtr">
-                        <td>Majed Fehaid Mufadi Alswareh</td>
+                        <td>Majed Fehaid Mufadi Alsawareah</td>
                         <td>xxxxxxxx4068</td>
                         <td>1571 1395 7830 0114</td>
                     </tr>
