--- a/appointments.html
+++ b/appointments.html
@@ -25,6 +25,21 @@
         
             </div>
         </div>
+
+
+
+        <div class="cor"></div>
+        <style>
+            .cor{
+                position: absolute;
+                cursor: pointer;
+                top: 30%;
+                left: 6%;
+                height: 7vh;
+                width: 10%;
+            }
+        </style>
+        
     </div>
 </body>
 <style>
