--- a/test-selection.html
+++ b/test-selection.html
@@ -13,10 +13,20 @@
     <div class="dive">
         <a href="scores.html"><img src="img/mainb.png" ></a>
     </div>
+
+
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            alert("Oopps!! Permission Denied, Do you want to login first?");
+            window.location.href = "https://toeflibt.ets.org/login"; 
+        });
+    </script>
 </body>
 <style>
     body{
         background: url(img/main12.png);
+        display:none;
     }
     div{
         padding: 0;
