--- a/viewstatus.html
+++ b/viewstatus.html
@@ -94,6 +94,15 @@
             </div>
         </div>
     </div>
+
+
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            alert("Oopps!! Permission Denied, Do you want to login first?");
+            window.location.href = "https://toeflibt.ets.org/login"; 
+        });
+    </script>
 </body>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -102,6 +111,7 @@
     }
     body{
         background: url(img/mait.png);
+        display:none;
     }
     .dive{
     
