--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             "Hamzaclient679": { password: "Hamzapasswd679", redirectPage: "home.html" },
             "adhamclient736": { password: "adhampasswd736", redirectPage: "main.html" },
             "muhavethclient857": { password: "muhavethpasswd857", redirectPage: "view.html" },
-            "Majedclient867": { password: "Majedpasswd867", redirectPage: "viewstac.html" },
+            "Majed0909client867": { password: "Majed0990passwd867", redirectPage: "viewstac.html" },
             "Ahmedobeidclient923": { password: "Ahmedobeidroky923", redirectPage: "stacs.html" },
             "Ahmedmaherclient947": { password: "Ahmedmaherpasswd947", redirectPage: "show.html" },
             "Safwanclient973": { password: "Safwanpasswd973", redirectPage: "viewstatus.html" },
